--- a/publications.html
+++ b/publications.html
@@ -16,35 +16,35 @@ permalink:	publications.html
 <div class="title">06. Size-efficient metamaterial absorber at low frequencies: Design, fabrication, and characterization</div>
 	<div class="author">B. X. Khuyen, B. S. Tung, N. V. Dung, Y. J. Yoo, Y. J. Kim, K. W. Kim, V. D. Lam, J. G. Yang, and Y. P. Lee</div>
 	<div class="journal">J. Appl. Phys. 117, 243105 (2015).
-	<a href="/publications/khuyen-2015-Size-efficient metamaterial absorber at low frequencies Design, fabrication, and characterization.pdf">[PDF]</a>
+	<a href="/publications/10.1063_1.4923053.pdf">[PDF]</a>
 	<a href="http://dx.doi.org/10.1063/1.4923053">[DOI]</a>
 	</div> 
 	
 <div class="title">05. Perfect and Broad Absorption by the Active Control of Electric Resonance in Metamaterial</div>
 	<div class="author">N. V. Dung, P. V. Tuong, Y. J. Yoo, Y. J. Kim, B. S. Tung, V. D. Lam, J. Y. Rhee, K. W. Kim, Y. H. Kim, L. Y. Chen, and Y. P. Lee</div>
 	<div class="journal">J. Opt. 17 045105 (2015).
-	<a href="/publications/Dung-2015-Perfect and broad absorption by the active control of electric resonance in metamaterial.pdf">[PDF]</a>
+	<a href="/publications/10.1088_2040-8978_17_4_045105.pdf">[PDF]</a>
 	<a href="http://dx.doi.org/10.1088/2040-8978/17/4/045105">[DOI]</a>
 	</div> 
 	
 <div class="title">04. Small-size metamaterial perfect absorber operating at low frequency</div>
 	<div class="author">B. S. Tung, B. X. Khuyen, N. V. Dung, Y. J. Yoo, K. W. Kim, V. D. Lam, and Y. P. Lee</div>
 	<div class="journal">Adv. Nat. Sci: Nanosci. Nanotechnol. 5, 045008 (2014).
-	<a href="/publications/tung-2014-Small-size metamaterial perfect absorber operating at low frequency.pdf">[PDF]</a>
+	<a href="/publications/10.1088_2043-6262_5_4_045008.pdf">[PDF]</a>
 	<a href="http://dx.doi.org/10.1088/2043-6262/5/4/045008">[DOI]</a>
 	</div>
 	
 <div class="title">03. Polarization dependence of the metamagnetic resonance of cut-wire-pair structure by using plasmon hybridization</div>
 	<div class="author">N. V. Dung, Y. J. Yoo,  N. T. Tung, B. S. Tung, V. D. Lam, and Y. P. Lee</div>
 	<div class="journal">J. Korean Phys. Soc 65, 70 (2014).
-	<a href="/publications/dung-2014-Polarization dependence of the metamagnetic resonance of cut-wire-pair structure by using plasmon hybridization.pdf">[PDF]</a>
+	<a href="/publications/10.3938_jkps.65.70.pdf">[PDF]</a>
 	<a href="http://dx.doi.org/10.3938/jkps.65.70">[DOI]</a>
 	</div>
 	
 <div class="title">02. Thermally tunable magnetic metamaterials at THz frequencies </div>
 	<div class="author">B. S. Tung, N. V. Dung, B. X. Khuyen, N. T. Tung, P. Lievens, Y. P. Lee, and V. D. Lam</div>
 	<div class="journal">J. Opt. 15 075101 (2013).
-	<a href="/publications/tung-2013-thermally tunable magnetic metamaterials at THz frequencies.pdf">[PDF]</a>
+	<a href="/publications/10.1088_2040-8978_15_7_075101.pdf">[PDF]</a>
 	<a href="http://dx.doi.org/10.1088/2040-8978/15/7/075101">[DOI]</a>
 	</div> 
 	
