--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: index
 <h3> Hi, I'm Nguyen Van Dung </h3>
 <p> I graduated from Hanoi University of Science with the Degree of BSc in the field of Material Science. Until January 2015, I've been a Master student in Department of Physics, Hanyang University. Which means i do research, like a rookie with a limit of <a href="/publications.html">publications</a>. I also like to write code, all kinds, but mostly Matlab and Python. </p>
 
-<p> After 1 year living in Korea, working with brilliant people, it changed my life a lot. </p>
+<p> After 1 year living in Korea, working with brilliant people, it has changed my life a lot. </p>
 
 It's not much, but I wrote some personal stories to kill free time. It has been <a href="/archives">archived</a>.
 </p>
