--- a/publications.html
+++ b/publications.html
@@ -11,10 +11,10 @@ permalink:	publications.html
 	
 <div class="title">07. Simple metamaterial structure enabling triple-band perfect absorber</div>
 	<div class="author">N. V. Dung, B. S. Tung, B. X. Khuyen, Y. J. Yoo, Y. J. Kim, J. Y. Rhee, V. D. Lam, and Y. P. Lee</div>
-	<div class="journal">J. Phys. D: Appl. Phys. 48, 375103 (2015).</div> 
+	<div class="journal">J. Phys. D: Appl. Phys. 48, 375103 (2015).
 	<a href="/publications/10.1088_0022-3727_48_37_375103.pdf">[PDF]</a>
 	<a href="http://dx.doi.org/10.1088/0022-3727/48/37/375103">[DOI]</a>
-	
+	</div> 
 <div class="title">06. Size-efficient metamaterial absorber at low frequencies: Design, fabrication, and characterization</div>
 	<div class="author">B. X. Khuyen, B. S. Tung, N. V. Dung, Y. J. Yoo, Y. J. Kim, K. W. Kim, V. D. Lam, J. G. Yang, and Y. P. Lee</div>
 	<div class="journal">J. Appl. Phys. 117, 243105 (2015).
