--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,9 @@ layout:	default
 permalink:	publications.html
 ---
 
-<p>The following modestly list of publications by Nguyen Van Dung. It will be up-to-date.</p>
+<div class="title">09. A comprehensive study on Mie resonance-based metamaterial perfect absorber</div>
+	<div class="author">N. V. Dung, B. S. Tung, B. X. Khuyen, Y. J. Yoo, J. Y. Rhee, V. D. Lam, and Y. P. Lee</div>
+	<div class="journal"> J. Appl. Phys. (submitted).</div> 
 
 <div class="title">08. Multi-band near-perfect absorption via the resonance excitation of dark meta-molecules</div>
 	<div class="author">B. S. Tung, B. X. Khuyen, N. V. Dung, V. D. Lam, Y. H. Kim, and Y. P. Lee</div>
