--- a/publications.html
+++ b/publications.html
@@ -3,13 +3,16 @@ layout:	default
 permalink:	publications.html
 ---
 
-<div class="title">09. A comprehensive study on Mie resonance-based metamaterial perfect absorber</div>
+<div class="title">09. Advantages of Mie resonance-based metamaterial perfect absorber: stable fabrication and high applicability</div>
 	<div class="author">N. V. Dung, B. S. Tung, B. X. Khuyen, Y. J. Yoo, J. Y. Rhee, V. D. Lam, and Y. P. Lee</div>
-	<div class="journal"> J. Appl. Phys. (submitted).</div> 
+	<div class="journal"> Opt. Commun. (submitted).</div> 
 
 <div class="title">08. Multi-band near-perfect absorption via the resonance excitation of dark meta-molecules</div>
 	<div class="author">B. S. Tung, B. X. Khuyen, N. V. Dung, V. D. Lam, Y. H. Kim, and Y. P. Lee</div>
-	<div class="journal"> Opt. Commun. (to be published).</div> 
+	<div class="journal"> Opt. Commun. 356, 362 (2015). 
+	<a href="/publications/10.1016_j.optcom.2015.08.022.pdf" class="">[PDF]</a>
+	<a href="http://dx.doi.org/10.1016/j.optcom.2015.08.022" class="">[DOI]</a>
+	</div>
 	
 <div class="title">07. Simple metamaterial structure enabling triple-band perfect absorber</div>
 	<div class="author">N. V. Dung, B. S. Tung, B. X. Khuyen, Y. J. Yoo, Y. J. Kim, J. Y. Rhee, V. D. Lam, and Y. P. Lee</div>
