--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ layout: index
 <img alt="Nguyen Van Dung bio photo" align="middle" style="max-width: 200px;border-radius: 150px;display: block;margin:auto;" src="//i.imgur.com/A6rCMLq.jpg">
 <p style="padding:0 10em;">
 <h3> Hi, I'm Nguyen Van Dung </h3>
-I graduated from Hanoi University of Science with the Degree of BSc in the field of Material Science. 2 years after, I got the Master degree's in Department of Physics, Hanyang University. Now, I'm a PhD student at the Institute of Neel, doing something about Graphene and 2D materials, like a rookie with a limit of <a href="/publications.html">publications</a>. I also like to write code, all kinds, but mostly Php and Python.
+I am a former student of Hanoi University of Science and Hanyang University. Now, I'm a PhD student at the Institute of Neel, my work focuses on 2D materials - Transition Metal Dichalcogenides. I do <i>ab-initio</i> simulations together with experiment on growing \(MoS_2\) by using MoCVD.
+
+I also like to write code, all kinds, but mostly PHP and Python.
 <br />
-It's not much, but I wrote some personal stories to kill free time. It's been <a href="/archives">archived</a>.
+It's not much, but I wrote some personal stories to during free time. It's been <a href="/archives">archived</a>.
 </p>
 </div>
