--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: index
 ---
 
+<script>
+window.location.replace("https://cenagram.com/@doanguyen");
+</script>
+
 <div class="entry-wrapper homepage">
     <img alt="Nguyen Van Dung bio photo" align="middle"
          style="max-width: 150px;border-radius: 150px;display: block;margin:auto;" src="//i.imgur.com/A6rCMLq.jpg">
