--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: index
 
 <div class="entry-wrapper homepage">
     <img alt="Nguyen Van Dung bio photo" align="middle"
-         style="max-width: 150px;border-radius: 150px;display: block;margin:auto;" src="//i.imgur.com/A6rCMLq.jpg">
+         style="max-width: 150px;border-radius: 150px;display: block;margin:auto;" src="/images/PNG image.png">
     <p style="padding:0 10em;">
     <h3>Hi, I'm Van-Dung NGUYEN</h3>
     I am a former student of Hanoi University of Science and Hanyang University. Now, I'm a PhD student at the Institute
